Avoid unfortunate line breaks in package dimensions column title using CSS on child element

--- a/client/packages/views/style.scss
+++ b/client/packages/views/style.scss
@@ -44,6 +44,10 @@
 		@include breakpoint( '<660px' ) {
 			width: 37%;
 		}
+
+		.package-dimensions-format {
+			white-space: nowrap;
+		}
 	}
 
 	.package-actions {
